--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             backDelay: 1000,
         });
 
-        // NEW: JavaScript for "Read More" functionality
+        // JavaScript for "Read More" functionality
         document.addEventListener("DOMContentLoaded", function() {
             const readMoreButtons = document.querySelectorAll(".read-more-btn");
 
